same as before uniform fonts

--- a/src/index.css
+++ b/src/index.css
@@ -516,7 +516,7 @@ code {
 .infotag {
   padding: 10px;
   letter-spacing: 3px;
-  font-family: fantasy;
+  font-family: 'MonteserratRegular';
   color: white;
   background-color: blue;
   border-radius: 10px;
